--- a/window-shopping/window-shopping/Base.lproj/Main.storyboard
+++ b/window-shopping/window-shopping/Base.lproj/Main.storyboard
@@ -28,25 +28,47 @@
                                     <constraint firstAttribute="width" constant="60" id="NAK-8u-rMp"/>
                                 </constraints>
                             </imageView>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your hourly wages" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bOq-l0-ehx" customClass="CurrencyTextField" customModule="window_shopping" customModuleProvider="target">
-                                <rect key="frame" x="83" y="152" width="229" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your hourly wages" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bOq-l0-ehx" customClass="CurrencyTextField" customModule="window_shopping" customModuleProvider="target">
+                                <rect key="frame" x="20" y="152" width="335" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="eQc-hS-B2c"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item Price" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="44Y-Pe-4hi" customClass="CurrencyTextField" customModule="window_shopping" customModuleProvider="target">
+                                <rect key="frame" x="20" y="202" width="335" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="E8X-Dh-ba3"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="83m-TY-b9Q" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="35" id="31y-J6-9t8"/>
                             <constraint firstItem="37s-Qz-Vxl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="4Yz-A0-bOR"/>
+                            <constraint firstItem="44Y-Pe-4hi" firstAttribute="top" secondItem="bOq-l0-ehx" secondAttribute="bottom" constant="10" id="6ym-g8-ca5"/>
                             <constraint firstItem="83m-TY-b9Q" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BXb-cL-IY7"/>
                             <constraint firstItem="37s-Qz-Vxl" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="FjC-wM-KwS"/>
                             <constraint firstItem="37s-Qz-Vxl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Hvf-L8-V7O"/>
+                            <constraint firstItem="44Y-Pe-4hi" firstAttribute="trailing" secondItem="bOq-l0-ehx" secondAttribute="trailing" id="LNv-g7-X92"/>
+                            <constraint firstItem="44Y-Pe-4hi" firstAttribute="leading" secondItem="bOq-l0-ehx" secondAttribute="leading" id="V3U-8l-GRc"/>
+                            <constraint firstItem="bOq-l0-ehx" firstAttribute="top" secondItem="83m-TY-b9Q" secondAttribute="bottom" constant="37" id="WbE-X0-G1Z"/>
+                            <constraint firstItem="bOq-l0-ehx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="fVa-0J-DYG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="bOq-l0-ehx" secondAttribute="trailing" constant="20" id="h2v-CK-A3L"/>
                             <constraint firstItem="37s-Qz-Vxl" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="h5P-tH-aB9"/>
+                            <constraint firstItem="44Y-Pe-4hi" firstAttribute="height" secondItem="bOq-l0-ehx" secondAttribute="height" id="wcL-96-VKY"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="pricetxt" destination="44Y-Pe-4hi" id="Zwn-Og-5RK"/>
+                        <outlet property="wagetxt" destination="bOq-l0-ehx" id="EhG-Ol-Br8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
